frontend/public/css/partifi.css
/* ... */
#scrollbar2 .scrollbar { position: absolute; top: 115px; left: -23px; width: 15px; border: 1px solid #D8D8C7; padding-top: 1px; background-color: #EAE8DC;}
#scrollbar2 .track { background-color: #EAE8DC; height: 100%; width:13px; position: relative; padding: 0 1px;}
#scrollbar2 .thumb { height: 20px; width: 13px; cursor: pointer; overflow: hidden; position: absolute; top: 0; }
#scrollbar2 .thumb .end { overflow: hidden; height: 5px; width: 13px; }
#scrollbar2 .disable { display: none; }

#scrollbar3
{
	height: 450px; 
	width: 260px; 
	position: absolute;
	top: 160px;
	left: 705px;
	text-align: left;
}

#scrollbar3 .viewport { width: 260px; height: 450px; overflow-x: hidden; overflow-y: auto; position: relative; }
#scrollbar3 .overview { list-style: none; position: relative; }
#scrollbar3 .thumb .end,
#scrollbar3 .thumb { background-color: #D8D8C7; }

#scrollbar3 .scrollbar { position: absolute; top: 115px; left: -23px; width: 15px; border: 1px solid #D8D8C7; padding-top: 1px; background-color: #EAE8DC;}
#scrollbar3 .track { background-color: #EAE8DC; height: 100%; width:13px; position: relative; padding: 0 1px;}
#scrollbar3 .thumb { height: 20px; width: 13px; cursor: pointer; overflow: hidden; position: absolute; top: 0; }
#scrollbar3 .thumb .end { overflow: hidden; height: 5px; width: 13px; }
#scrollbar3 .disable { display: none; }

.combined-part-selector-item 
{
	width: 100%;
	height: 32px;
	padding-top: 10px;
	padding-left: 10px;
	cursor: pointer;
	position: relative;
}

.combined-part-selector-item-txt 
{
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 17px;
	width: 235px;
	margin: auto;
	overflow: hidden;
	white-space:nowrap;
}

.combined-part-selector-item-overlay
{
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0px;
	left: 0px;
	background-image: url('/images/combined-part-overlay.png');
}


.combined-part-delete
{
	position: relative;
	height: 18px;
	width: 18px;
	background-image: url('/images/ex.gif');
	cursor: pointer;
	float: left;
	margin-right: 5px;
	z-index: 10;
}

#combine-now-button 
{
	position: absolute;
	bottom: 10px;
	left: 60px;
	padding: 2px 20px 2px 20px;
	width: 70px;
	background: #D8D5C2;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 15px;
	color: #E00000;
	border: 0px;
	border-radius:6px;
	box-shadow: 0px 1px 1px black;
	cursor: pointer;
	text-align: center;
	line-height: 30px;
}

.checkbox {
	background: url('/images/check_box.png');
	height: 19px;
	width: 20px;
	float: left;
	margin-right: 5px;
	cursor: pointer;
}

.check {
	position: relative;
	top: 3px;
	left: 4px;
	background: url('/images/check.png');
	height: 12px;
	width: 11px;
	display: none;
}

/* DOWNLOAD */

#main.parts-page {
	min-height: 750px;
	padding-bottom: 40px;
}

.download-pane 
{
	width: 734px;
	height: auto;
	background-image: url('/images/box_middle.png');
	position: relative;
	margin: 100px auto 100px;
}

.box-top {
	width: 734px;
	height: 15px;
	background-image: url('/images/box_top.png');
	position: absolute;
	top: -5px;
	left: 0px;
	pointer-events: none;
}

.box-bottom {
	width: 734px;
	height: 15px;
	background-image: url('/images/box_bottom.png');
	position: absolute;
	bottom: -5px;
	left: 0px;
	pointer-events: none;
}

.download-menu {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	position: absolute;
	top: 10px;
	right: 20px;
	color: gray;
	white-space: nowrap;
}

.partset-info {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	position: relative;
	left: 30px;
	width: 600px;
	height: auto;
	text-align: left;
	border-bottom: 2px dotted gray;
	margin-top: 45px;
	margin-bottom: 20px;
	padding-bottom: 30px;
	color: gray;
}

.score-title {
	font-size: 24px;
	color: black;
	margin-bottom: 5px;
}

.score-composer {
	margin-bottom: 5px;
}

.partset-download {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	position: relative;
	left: 30px;
	width: 600px;
	height: auto;
	text-align: left;
	border-bottom: 2px dotted gray;
	margin-top: 20px;
	padding-bottom: 20px;
	color: gray;
	line-height: 30px;
}

.download-title{
	font-size: 24px;
	color: black;
	margin-bottom: 10px;
}

.partset-links {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	position: relative;
	left: 30px;
	width: 550px;
	height: auto;
	text-align: left;
	margin-top: 40px;
	margin-bottom: 20px;
	color: gray;
	line-height: 30px;
}

.partset-link {
	height: 50px;
	position: relative;
}

.partset-link-label {
	text-align: right;
	width: 100px;
	position: absolute;
	top: 0px;
}

.partset-link-link {
	position: absolute;
	width: 250px;
	top: 0px;
	left: 120px;
	border-bottom: 2px dotted gray;
}

.partset-link-tip {
	position: absolute;
	top: -3px;
	left: 340px;
}

.copy-button 
{
	position: absolute;
	top: -6px;
	left: 400px;
	padding: 2px 20px 2px 20px;
	width: 50px;
	background: #D8D5C2;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 15px;
	color: #E00000;
	border: 0px;
	border-radius:6px;
	box-shadow: 0px 1px 1px black;
	cursor: pointer;
	text-align: center;
}

.copy-button:active
{
	background: #9b9485;
}

.share-button 
{
	position: absolute;
	top: -6px;
	left: 500px;
	padding: 2px 20px 2px 20px;
	width: 50px;
	background: #D8D5C2;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 15px;
	color: #E00000;
	border: 0px;
	border-radius:6px;
	box-shadow: 0px 1px 1px black;
	cursor: pointer;
	text-align: center;
}

.share-button:active
{
	background: #9b9485;
}

.save-button 
{
	position: absolute;
	top: 83px;
	left: 500px;
	padding: 2px 20px 2px 20px;
	width: auto;
	background: #D8D5C2;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 15px;
	color: #E00000;
	border: 0px;
	border-radius:6px;
	box-shadow: 0px 1px 1px black;
	cursor: pointer;
	line-height: 30px;
	display: none;
}
/* ... */

